cityapp/server/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cityapp-deployment
  namespace: jkpgcity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cityapp
  template:
    metadata:
      labels:
        app: cityapp
    spec:
      containers:
      - name: cityapp
        image: localhost:5001/cityapp
