cityapp/server/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cityapp-service
  namespace: jkpgcity
spec:
  selector:
    app: cityapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
